--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint --fix "
   },
   "private": true,
   "dependencies": {
@@ -35,6 +35,7 @@
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.2.1",
     "eslint": "^9.22.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
