--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve  --configuration=development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --include=**/reminder-form.component.spec.ts",
     "lint": "ng lint --fix "
   },
   "private": true,
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
     "@ngrx/schematics": "^19.0.1",
+    "jasmine": "^5.6.0",
     "ngrx": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
