--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/entity": "^19.0.1",
     "@ngrx/schematics": "^19.0.1",
+    "@ngrx/store": "^19.0.1",
+    "@ngrx/store-devtools": "^19.0.1",
     "jasmine": "^5.6.0",
     "ngrx": "^0.0.1-security",
     "rxjs": "~7.8.0",
